crates/rulesteward-fapolicyd/tests/snapshots/fapd-F03__comments-between-flavors.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-F03] sev=Fatal line=7 col=1 span=130..168 :: file mixes modern (`:`) and legacy (no `:`) rule syntaxes - pick one
