crates/rulesteward-fapolicyd/tests/snapshots/fapd-F03__flavor-flip-flop.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-F03] sev=Fatal line=2 col=1 span=28..57 :: file mixes modern (`:`) and legacy (no `:`) rule syntaxes - pick one
