crates/rulesteward-fapolicyd/tests/snapshots/fapd-F03__many-modern-one-legacy.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-F03] sev=Fatal line=4 col=1 span=117..145 :: file mixes modern (`:`) and legacy (no `:`) rule syntaxes - pick one
